# django_enduromcb

./: README.md  codigo.txt  django_enduro_mcb - Atalho.lnk  manage.py  pyproject.toml
config/: obterip.py  settings.py  urls.py
enduro/: apps.py
enduromcb/: .gitignore  admin.py  apps.py  forms.py  funcoes.py  models.py  resources.py  tests.py  urls.py  views.py
enduromcb/migrations/: 0001_initial.py  0002_rename_numero_piloto_registrarchegada_piloto_and_more.py  0003_alter_piloto_moto.py  0004_ordemlargada.py  0005_configuracaoprova.py
enduromcb/templates/: cadastrar_piloto.html  debug_tempos.html  exibir_pilotos.html  registrar_chegada.html  registrar_chegada02.html  registrar_chegada03.html  registrar_largada.html  registrar_largada02.html  registrar_largada03.html  resultado_piloto.html  resultados.html  resultados_parciais.html  resumo_corrida.html
enduromcb/templatetags/: format_filters.py
